fixed some alignment

--- a/Client/scallywags/src/components/RoomInfo /RoomInfo.scss
+++ b/Client/scallywags/src/components/RoomInfo /RoomInfo.scss
@@ -1,5 +1,5 @@
 .sideBlock{
-    height: 49%;
+    height: 50%;
     border: 1px solid blue;
     width: 100%;
 }
