--- a/Client/scallywags/src/components/buttons/buttons.scss
+++ b/Client/scallywags/src/components/buttons/buttons.scss
@@ -1,8 +1,15 @@
 .directionButton{
     width: 100px;
     height: 50px;
-    margin-right: 10px;
+    margin: 20px;
     background: blue;
     color: white;
     font-size: 1.4rem;
 }
+
+.buttonBar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
