--- a/Client/scallywags/src/views/home/Home.scss
+++ b/Client/scallywags/src/views/home/Home.scss
@@ -2,6 +2,7 @@
     display: flex;
     width: 100%;
     border: 3px solid black;
+    margin-bottom: 50px;
 }
 
 .sideBar{
